2009-03-27  Alberto Garcia  <agarcia@igalia.com>

	* TRANSLATORS
	* po/fr.po
	* src/uimisc.c:
	Updated French translation, by Jean-Alexandre Angles d'Auriac

2009-03-21  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (parse_xml_tags): Fix infinite loop.

2009-03-18  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_parse_playlist)
	* src/metadata.c (parse_xml_tags, -get_xml_tag_name):
	Refactor code using xml functions in util.c

2009-03-18  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (get_xml_tag_name)
	* src/protocol.c (lastfm_parse_track)
	* src/userconfig.c (vgl_user_cfg_read)
	* src/util.c (xml_get_string, xml_get_bool, xml_get_glong)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_load_from_disk):
	Don't make xml_get_string() free the value parameter, return NULL
	instead

2009-03-17  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_parse_track):
	Refactor code using xml functions in util.c

2009-03-16  Alberto Garcia  <agarcia@igalia.com>

	* src/util.h
	* src/util.c (xml_add_glong, xml_get_glong, xml_get_string)
	(xml_find_node):
	Added xml_find_node(), xml_add_glong() and xml_get_glong()

2009-03-14  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c (get_xml_tag_name)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_load_from_disk)
	(vgl_bookmark_mgr_save_to_disk)
	* src/xmlrpc.c (string_param, array_param):
	Refactor code using xml_add_string() and xml_get_string() from
	util.c

2009-03-14  Alberto Garcia  <agarcia@igalia.com>

	* src/util.h
	* src/util.c
	(xml_add_string, xml_get_string, xml_get_bool):
	Extra checks for parameters.
	(xml_get_string, xml_get_bool):
	Allow passing NULL nodes (= empty lists) as parameter.
	Return the node, or NULL if not found.

2009-03-14  Alberto Garcia  <agarcia@igalia.com>

	* src/userconfig.c
	* src/util.h
	* src/util.c
	(xml_add_string, xml_add_bool, xml_get_string, xml_get_bool):
	Moved from userconfig.c to util.c, as they're useful for other
	modules too.
