@@ -1,3 +1,12 @@
+2009-04-03  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/metadata.c (parse_xml_tags)
+	* src/protocol.c (lastfm_parse_track, lastfm_parse_playlist)
+	* src/userconfig.c (vgl_user_cfg_read)
+	* src/util.c (xml_find_node)
+	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_load_from_disk):
+	Replace xmlStrcmp() by xmlStrEqual() for speed and readability
+
 2009-03-27  Alberto Garcia  <agarcia@igalia.com>
 
 	* TRANSLATORS
